Repair navbar dropdown button on small screens (#1173)
* Repair the navbar dropdown button

* force language buttons to have wider padding on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -464,6 +464,10 @@ Top Navigation Bar
     color:#39a;
   }
 
+  .navbar-toggler-icon {
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  }
+
   .navbar-collapse {
     text-align:center;
   }
@@ -472,6 +476,11 @@ Top Navigation Bar
     font-family:'Crete Round', serif;
     color:#fff;
     letter-spacing: .02em;
+  }
+
+  .btn-group > a.btn {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   a.dropdown-item {
